grpc internal client
