# student/handler/handler.go
@@ -2,7 +2,9 @@ package handler
 
 import (
 	"context"
+	"fmt"
 
+	courseProto "github.com/fahimsGit/basic-microservice/proto/course"
 	pb "github.com/fahimsGit/basic-microservice/proto/student"
 	"github.com/fahimsGit/basic-microservice/student/repository"
 	"github.com/google/uuid"
@@ -11,6 +13,7 @@ import (
 
 type service struct {
 	repoistory repository.StudentRepository
+	client     courseProto.CourseServiceClient
 }
 
 func (s *service) CreateStudent(ctx context.Context, req *pb.RequestCreateStudent) (*pb.ResponseCreateStudent, error) {
@@ -48,8 +51,54 @@ func (s *service) GetAllStudent(ctx context.Context, empty *emptypb.Empty) (*pb.
 	}, nil
 }
 
-func NewService(repo repository.StudentRepository) pb.StudentServiceServer {
+func (s *service) CreateCourseEnrollment(ctx context.Context, req *pb.RequestCreateCourseEnrollment) (*pb.ResponseCreateCourseEnrollment, error) {
+	courseId := req.GetCourseId()
+	studentId := req.GetStudentId()
+	grpcReq := &courseProto.RequestGetSingleCourse{
+		CourseId: courseId,
+	}
+	course, err := s.client.GetSingleCourse(context.Background(), grpcReq)
+	if err != nil {
+		fmt.Println(err)
+		return &pb.ResponseCreateCourseEnrollment{
+			Id:         studentId,
+			Name:       "",
+			CourseId:   courseId,
+			CourseName: "",
+			Status: &pb.Status{
+				Success: false,
+				Error:   "Course Not found",
+			},
+		}, err
+	}
+
+	reponse, err := s.repoistory.CreateCourseEnrollment(req, course.Course.Name)
+
+	if err != nil {
+		return &pb.ResponseCreateCourseEnrollment{
+			Id:         studentId,
+			Name:       "",
+			CourseId:   courseId,
+			CourseName: "",
+			Status:     &pb.Status{Success: false, Error: err.Error()},
+		}, nil
+	}
+
+	return &pb.ResponseCreateCourseEnrollment{
+		Id:         reponse.Id,
+		Name:       "StudentName",
+		CourseId:   reponse.CourseId,
+		CourseName: reponse.CourseName,
+		Status: &pb.Status{
+			Success: true,
+			Error:   "",
+		},
+	}, nil
+}
+
+func NewService(repo repository.StudentRepository, client courseProto.CourseServiceClient) pb.StudentServiceServer {
 	return &service{
 		repoistory: repo,
+		client:     client,
 	}
 }
